--- a/libft/Makefile
+++ b/libft/Makefile
@@ -18,6 +18,7 @@ FILES	= ft_memset.c \
 		ft_strncmp.c \
 		ft_strnstr.c \
 		ft_strlen.c \
+		ft_substr.c \
 		ft_atoi.c \
 		ft_tolower.c \
 		ft_toupper.c \
