--- a/libft/Makefile
+++ b/libft/Makefile
@@ -10,14 +10,17 @@ FILES	= ft_memset.c \
 		ft_memmove.c \
 		ft_memchr.c \
 		ft_memcmp.c \
-		ft_strdup.c \
 		ft_strchr.c \
-		ft_strrchr.c \
+		ft_strdup.c \
+		ft_strjoin.c \
 		ft_strlcat.c \
 		ft_strlcpy.c \
+		ft_strlen.c \
+		ft_strmapi.c \
 		ft_strncmp.c \
 		ft_strnstr.c \
-		ft_strlen.c \
+		ft_strrchr.c \
+		ft_strtrim.c \
 		ft_substr.c \
 		ft_atoi.c \
 		ft_tolower.c \
