--- a/libft/Makefile
+++ b/libft/Makefile
@@ -10,6 +10,10 @@ FILES	= ft_memset.c \
 		ft_memmove.c \
 		ft_memchr.c \
 		ft_memcmp.c \
+		ft_putchar_fd.c \
+		ft_putendl_fd.c \
+		ft_putnbr_fd.c \
+		ft_putstr_fd.c \
 		ft_strchr.c \
 		ft_strdup.c \
 		ft_strjoin.c \
@@ -21,8 +25,10 @@ FILES	= ft_memset.c \
 		ft_strnstr.c \
 		ft_strrchr.c \
 		ft_strtrim.c \
+		ft_striteri.c \
 		ft_substr.c \
 		ft_atoi.c \
+		ft_split.c \
 		ft_tolower.c \
 		ft_toupper.c \
 		ft_isalnum.c \
