--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,6 +6,9 @@ HEAD	= libft.h
 FILES	= ft_memset.c \
 		ft_bzero.c \
 		ft_calloc.c \
+		ft_lstadd_front.c \
+		ft_lstnew.c \
+		ft_lstsize.c \
 		ft_memcpy.c \
 		ft_memmove.c \
 		ft_memchr.c \
