--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,4 +1,3 @@
-CC	= gcc
 CFLAGS	= -Wall -Wextra -Werror -c
 
 NAME	= libft.a
@@ -6,7 +5,13 @@ HEAD	= libft.h
 FILES	= ft_memset.c \
 		ft_bzero.c \
 		ft_calloc.c \
+		ft_lstadd_back.c \
 		ft_lstadd_front.c \
+		ft_lstclear.c \
+		ft_lstdelone.c \
+		ft_lstiter.c \
+		ft_lstlast.c \
+		ft_lstmap.c \
 		ft_lstnew.c \
 		ft_lstsize.c \
 		ft_memcpy.c \
